force-app/main/default/objects/Enrollment_Event__e.object
<CustomObject>
    <fields>
        <fullName>actionContext__c</fullName>
        <label>actionContext</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>action__c</fullName>
        <label>action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationName__c</fullName>
        <label>applicationName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>correlationId__c</fullName>
        <label>correlationId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enrollmentId__c</fullName>
        <description>Holds the Enrollment Id</description>
        <label>enrollmentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entity__c</fullName>
        <label>entity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>locationId__c</fullName>
        <label>locationId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Enrollment Event</label>
    <pluralLabel>Enrollment Event</pluralLabel>
</CustomObject>